# himewm

./: .gitignore  Cargo.toml  LICENSE  README.md
himewm/: Cargo.toml
himewm/assets/: icon.data
himewm/src/: directories.rs  init.rs  keybinds.rs  layout.rs  layouts.rs  lib.rs  main.rs  settings.rs  tray_icon.rs  tray_menu.rs  user_config.rs  user_settings.rs  util.rs  window_rules.rs  windows_api.rs  wm.rs  wm_cb.rs  wm_message_handler.rs  wm_messages.rs  wm_util.rs
himewm/src/wm/: cb.rs  macros.rs  message_handler.rs
himewm_layout/: Cargo.toml
himewm_layout/src/: common.rs  layout.rs  lib.rs  position.rs  user_layout.rs  variant.rs  variants_container.rs
himewm_layout_editor/: Cargo.toml
himewm_layout_editor/src/: lib.rs  main.rs
himewm_layout_editor/tests/: create_layouts.rs  show_layouts.rs
src/: layout.rs  main.rs  wm.rs
