[package]
name = "himewm"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.59.0", features = ["Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_UI_Accessibility", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
