[package]
name = "himewm"
version = "0.1.0"
edition = "2021"

[dependencies]
himewm_layout = { path = "../himewm_layout" }

directories = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
windows = { version = "0.59.0", features = ["Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_System_Console", "Win32_System_Threading", "Win32_UI_Accessibility", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
tray-icon = "0.19.2"
regex = "1.11.1"
